tests/baselines/reference/errorsForAssignmentOfArrayLiteralToNever.errors.txt
tests/cases/compiler/errorsForAssignmentOfArrayLiteralToNever.ts(3,1): error TS2322: Type 'number[]' is not assignable to type 'never'.
tests/cases/compiler/errorsForAssignmentOfArrayLiteralToNever.ts(5,1): error TS2322: Type '(string | number)[]' is not assignable to type 'never'.
tests/cases/compiler/errorsForAssignmentOfArrayLiteralToNever.ts(7,6): error TS2322: Type 'string' is not assignable to type 'never'.
tests/cases/compiler/errorsForAssignmentOfArrayLiteralToNever.ts(11,4): error TS2345: Argument of type 'number[]' is not assignable to parameter of type 'never'.
tests/cases/compiler/errorsForAssignmentOfArrayLiteralToNever.ts(13,6): error TS2322: Type 'number' is not assignable to type 'never'.


==== tests/cases/compiler/errorsForAssignmentOfArrayLiteralToNever.ts (5 errors) ====
    let y: never;
    
    y = [1, 2, 3];
    ~
!!! error TS2322: Type 'number[]' is not assignable to type 'never'.
    
    y = [1, '2', 3];
    ~
!!! error TS2322: Type '(string | number)[]' is not assignable to type 'never'.
    
    y = {x: '1'};
         ~
!!! error TS2322: Type 'string' is not assignable to type 'never'.
    
    declare function nv(x: never): void;
    
    nv([1, 2, 3]);
       ~~~~~~~~~
!!! error TS2345: Argument of type 'number[]' is not assignable to parameter of type 'never'.
    
    nv({ x: 1 });
         ~
!!! error TS2322: Type 'number' is not assignable to type 'never'.
    